remove from azure rulesets

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,6 +41,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Decorators
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
+- [`@additionalApiVersions`](./decorators.md#@Azure.ClientGenerator.Core.additionalApiVersions)
 - [`@alternateType`](./decorators.md#@Azure.ClientGenerator.Core.alternateType)
 - [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
