--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -703,6 +703,8 @@ client.upload()
 client.download()
 ```
 
+</ClientTabs>
+
 If you want to rename the parameter name that you elevate to the client level, you can use the `@paramAlias` decorator.
 
 <ClientTabs>
