--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,10 +41,10 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Decorators
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
-- [`@additionalApiVersions`](./decorators.md#@Azure.ClientGenerator.Core.additionalApiVersions)
 - [`@alternateType`](./decorators.md#@Azure.ClientGenerator.Core.alternateType)
 - [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
+- [`@clientApiVersions`](./decorators.md#@Azure.ClientGenerator.Core.clientApiVersions)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
