--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -173,10 +173,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`AzureEntityResource`](./data-types.md#Azure.ResourceManager.CommonTypes.AzureEntityResource)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityRequest)
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityResponse)
-- [`customerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CommonTypes.customerManagedKeyEncryption)
+- [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CommonTypes.CustomerManagedKeyEncryption)
 - [`DelegatedResource`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResource)
 - [`DelegatedResources`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResources)
-- [`encryption`](./data-types.md#Azure.ResourceManager.CommonTypes.encryption)
+- [`Encryption`](./data-types.md#Azure.ResourceManager.CommonTypes.Encryption)
 - [`encryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.encryptionProperties)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorAdditionalInfo)
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorDetail)
