[doc][etag] Update doc (#2225)
The typespec is already complete for sample and there is only missing
for Go/js/C# examples.
@tadelesh / @MaryGao / @ArcturusZhang, please help add example code for
your language.

---------

Co-authored-by: JiaqiZhang-Dev <jiaqzhang@microsoft.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
@@ -34,11 +34,11 @@ def get(self, *, etag: Optional[str] = None, match_condition: Optional[MatchCond
 ```
 
 ```csharp
-
+# TODO
 ```
 
 ```typescript
-
+# TODO
 ```
 
 ```java
@@ -48,7 +48,15 @@ public Response get(MatchConditions matchConditions);
 ```
 
 ```go
+type ClientGetOptions struct {
+	// The request should only proceed if an entity matches this string.
+	IfMatch *string
 
+	// The request should only proceed if no entity matches this string.
+	IfNoneMatch *string
+}
+
+func (client *Client) Get(ctx context.Context, options *ClientGetOptions) (ClientGetResponse, error)
 ```
 
 </ClientTabs>
