--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -45,6 +45,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientApiVersions`](./decorators.md#@Azure.ClientGenerator.Core.clientApiVersions)
+- [`@clientDoc`](./decorators.md#@Azure.ClientGenerator.Core.clientDoc)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
